[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "socks"] }
rocksdb = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["full"] }
toml = "0.5"
url = "2.2"
