[package]
name = "pigeon"
version = "0.2.22"
edition = "2021"
repository = "https://github.com/williamlsh/pigeon"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.17"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[features]
socks = ["reqwest/socks"]

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
# The installers to generate for each app
installers = ["shell"]
